Annotation ansyn visualizer (#2251)
* annotation context menu for plugin

* move all context menu components

* click outside directive to ol

* fix: tests

* cooler annotation context menu

* cooler color picker

* context menu label

* context menu label

* context menu icons

* context menu icons

* active color svg

* fix: tests

* CR

* clean code

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-weight/annotations-weight.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-weight/annotations-weight.component.less
@@ -1,4 +1,4 @@
-@import "../../less/map-facade";
+@import "ansyn/less/colors";
 
 div.list {
 	display: flex;
@@ -17,7 +17,8 @@ div.list {
 		}
 	}
 
-	&.color-selection-expand.open {
-		visibility: visible;
+	&.line-width-expand {
+		width: 100%;
+		outline: none;
 	}
 }
