--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.less
@@ -1,10 +1,9 @@
-@import "../../less/map-facade";
+@import "ansyn/less/colors";
 
 div.list {
 	display: flex;
 	flex-direction: column;
 	position: absolute;
-	overflow: hidden;
 	padding: 0;
 	margin: 0;
 	text-align: center;
@@ -17,8 +16,7 @@ div.list {
 		}
 	}
 
-	&.line-width-expand {
-		width: 100%;
-		outline: none;
+	&.color-selection-expand.open {
+		visibility: visible;
 	}
 }
