add check in ngIf to prevent crash

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
@@ -1,5 +1,5 @@
 <ansyn-imagery-status
-	*ngIf="!hideOverlay"
+	*ngIf="!hideOverlay && activeMap"
 	[mapState]="activeMap">
 </ansyn-imagery-status>
 
