feat: multi selection annotations

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-color/annotations-color.component.less
@@ -5,6 +5,7 @@ div.list {
 	flex-direction: column;
 	position: absolute;
 	padding: 0;
+	outline: none;
 	margin: 0;
 	text-align: center;
 	transition: height 0.3s;
