--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -122,7 +122,8 @@
       "region",
       "overlaysManualProcessArgs",
       "orientation",
-      "layers"
+      "layers",
+      "miscOverlays"
     ],
     "updateCaseDebounceTime": 700,
     "useHash": true,
