--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -18,3 +18,5 @@
 <button (click)="setMarcoOverlays()">Display Marco overlays in timeline</button>
 
 <button (click)="loadImageToCesium()">load Image To Cesium</button>
+
+<button (click)="setMiscOverlays()">set Misc Overlays</button>
