--- a/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
@@ -4,6 +4,7 @@
 						  class="with-background"
 						  [mapState]="mapState"
 						  (onMove)="onMove.emit($event)"
+						  [extraDescription]="extraDescription$ | async"
 						  (toggleMapSynchronization)="toggleMapSynchronization()">
 	</ansyn-imagery-status>
 
