Add component ansyn-footer to wrap timeline and status bar

--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -9,18 +9,10 @@
 			<ansyn-context-menu *ngIf="renderContextMenu"></ansyn-context-menu>
 		</div>
 
-		<div class="status-timeline-container">
-			<div class="status">
-				<ansyn-status-bar
-					[selectedCaseName]="(selectedCaseName$ | async)"
-					[activeMap]="(activeMap$ | async)">
-				</ansyn-status-bar>
-			</div>
-
-			<div class="app-timeline-container">
-				<ansyn-overlays-container></ansyn-overlays-container>
-			</div>
-		</div>
+		<ansyn-footer
+			[selectedCaseName]="(selectedCaseName$ | async)"
+			[activeMap]="(activeMap$ | async)">
+		></ansyn-footer>
 	</div>
 </div>
 
