--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -87,20 +87,6 @@
 			overflow: hidden;
 			position: relative;
 
-			div.status-timeline-container {
-				position: relative;
-
-				.status {
-					position: relative;
-					height: 0;
-				}
-
-				.app-timeline-container {
-					height: @timeline-area-height;
-					background-color: white;
-				}
-			}
-
 			.maps-container {
 				position: relative;
 				flex: 1;
@@ -161,7 +147,7 @@
 				animation-fill-mode: forwards;
 			}
 
-			div.layer div.status-timeline-container {
+			div.layer ansyn-footer {
 				animation: timeline-init @animation-duration;
 			}
 		}
