Initial code for the new vertical toggle button

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -327,7 +327,8 @@
 			"poorGeoRegistered": "Poor Geo Registered"
 	   	}
     },
-	 "httpTimeout": "3000"
+	 "httpTimeout": "3000",
+	 "isFooterCollapsible": true
   },
   "olConfig": {
   	 "needToUseLayerExtent": false,
@@ -354,7 +355,7 @@
     	"title": "Fork me on github",
 		"href": "{{ getv "/ansyn/menu/forkme/url" "https://github.com/ansyn/ansyn" }}"
     },
-    "isCollapsible": false
+    "isCollapsible": true
   },
   "loginConfig": {
   	"baseUrl": "{{ getv "/ansyn/login/baseurl" "http://platform.ansyn.io:9001/api/v1/login" }}",
