--- a/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.less
+++ b/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.less
@@ -18,3 +18,23 @@ div.status-timeline-container {
 		background-color: white;
 	}
 }
+
+
+button.hide-menu {
+	position: absolute;
+	transform: translateY(calc(~'-100% - @{status-bar-height}'));
+	left: calc(~'50% - 0px');
+	width: 60px;
+	background: #2e2d46;
+	border: none;
+	color: white;
+	box-shadow: 2px 0 4px -2px black;
+	outline: none;
+	visibility: visible;
+	transition: .5s;
+	z-index: 4000;
+
+	&:hover {
+		background-color: #27B2CF;
+	}
+}
