--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -1,17 +1,18 @@
 <div class="app animations" [ngClass]="(isPinnedClass$ | async)">
 	<div class="menu">
-		<ansyn-menu [version]="version" [animatedElement]="animatedElement"></ansyn-menu>
+		<ansyn-menu [version]="version" [animatedElement]="animatedElementHorizontal"></ansyn-menu>
 	</div>
 
-	<div class="layer" #animatedElement>
-		<div class="maps-container">
+	<div class="layer" #animatedElementHorizontal>
+		<div class="maps-container" #animatedElementVertical>
 			<ansyn-imageries-manager></ansyn-imageries-manager>
 			<ansyn-context-menu *ngIf="renderContextMenu"></ansyn-context-menu>
 		</div>
 
 		<ansyn-footer
 			[selectedCaseName]="(selectedCaseName$ | async)"
-			[activeMap]="(activeMap$ | async)">
+			[activeMap]="(activeMap$ | async)"
+			[animatedElement]="animatedElementVertical"
 		></ansyn-footer>
 	</div>
 </div>
