--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -124,6 +124,24 @@
 				}
 			}
 
+			@keyframes collapsedVertical {
+				from {
+					transform: scale(1) translateY(-100px);
+				}
+				to {
+					transform: scale(1) translateY(0);
+				}
+			}
+
+			@keyframes unCollapsedVertical {
+				from {
+					transform: scale(1.2) translateY(100px);
+				}
+				to {
+					transform: scale(1) translateY(0);
+				}
+			}
+
 			div.menu {
 				animation: menu-init @animation-duration;
 				transform: transitionX(0);
