--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
@@ -54,7 +54,7 @@
 					</button>
 					<ansyn-annotations-weight
 						[show]="selectedTab[featureId] === Tabs.Weight"
-						[properties]="getFeatureProps(featureId)?.style.initial"
+						[properties]="getFeatureProps(featureId)?.style?.initial"
 						(selectLineWidth)="selectLineWidth($event.width, featureId)">
 					</ansyn-annotations-weight>
 				</p>
