feat: multi selection annotations (#2268)
* feat: multi selection annotations

* remove close func:

* add dispose func

* finish selection

* fix: ann context menu test

* fix

* fix: test

* drag box selection

* mv click outside module

* fix: annotation context menu

* fix: testS

* fix: tests

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.less
@@ -13,12 +13,14 @@ i {
 }
 
 :host {
+	outline: none;
 	position: absolute;
 	display: block;
 	width: 0;
 	height: 100%;
 	top: 0;
 	left: 0;
+	z-index: 1;
 
 	div.context-menu-wrapper {
 		position: absolute;
@@ -39,6 +41,7 @@ i {
 
 			ul.buttons {
 				position: absolute;
+				outline: none;
 				pointer-events: all;
 				border: 1px solid white;
 				box-sizing: border-box;
