add status to map facade entryComponent

--- a/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
@@ -21,7 +21,7 @@
 						  [mapId]="mapState.id"></ansyn-map-search-box>
 
 	<ng-container
-		*ngFor="let component of entryComponents"
+		*ngFor="let component of entryComponents.container"
 		[ansynEntryComponent]="{ component: component , mapState: mapState }">
 	</ng-container>
 
