Add basic colors

--- a/src/app/@ansyn/ansyn/less/colors.less
+++ b/src/app/@ansyn/ansyn/less/colors.less
@@ -1,12 +1,13 @@
 @status-color: rgba(0, 0, 0, 0.70);
-@timeline-color: #557f86;
 @status-bar-height: 35px;
 @source-type-notice-width: 40%;
 @welcome-notification-width: 30%;
-@application-main-color: #27B2CF;
-@application-contrast-color: #d393e1;
-@overlays-dots-color: #d393e1;
-@overlays-dots-color-hover: #bd0fe2;
+@application-main-color: rgba(44, 44, 44, 0.91);
+@application-primary-color: #0091ff;
+@application-contrast-color: #8cceff;
+@overlays-dots-color: #8cceff;
+@overlays-dots-color-hover: #fb634e;
 @menu-width: 90px;
-@menu-color: #2E2D46;
+@menu-color: #0e0e0e;
+@menu-container-color: #1a1a1a;
 @timeline-area-height: 110px;
