--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.less
@@ -1,7 +1,9 @@
+@import "ansyn/less/common";
+
 div.container {
-	padding: 0 0 20px 0;
-	// margin-top: 25px;
-	// margin-left: 10px;
+	background-color: @menu-container-color;
+	margin-bottom: 13px;
+	padding: 13px;
 	div.title-row {
 		padding: 5px 0 10px 0;
 
