--- a/src/app/@ansyn/map-facade/less/map-facade.less
+++ b/src/app/@ansyn/map-facade/less/map-facade.less
@@ -13,17 +13,17 @@
 @z-index-spinner: 9999999;
 @z-index-spinner-before: 1000;
 @status-color: rgba(0, 0, 0, 0.70);
-@timeline-color: #557f86;
 @source-type-notice-width: 40%;
 @welcome-notification-width: 30%;
-@application-contrast-color: #d393e1;
-@overlays-dots-color: #d393e1;
-@overlays-dots-color-hover: #bd0fe2;
-@menu-width: 90px;
+@application-contrast-color: #8cceff;
+@overlays-dots-color: #8cceff;
+@overlays-dots-color-hover: #fb634e;
 @timeline-area-height: 110px;
 
-@application-main-color: #27B2CF;
-@menu-color: #2E2D46;
+@application-main-color: rgba(44, 44, 44, 0.91);
+@application-primary-color: #0091ff;
+@menu-color: #0e0e0e;
+@menu-container-color: #1a1a1a;
 @status-bar-height: 35px;
 @z-index-map-search-box: 1;
 @z-index-map-rotation: 2;
