--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -92,7 +92,7 @@ div.menu-wrapper {
 				background-color: @application-main-color;
 			}
 			&.active {
-				background-color: @application-main-color;
+				background-color: @application-primary-color;
 			}
 		}
 	}
