--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -1,7 +1,9 @@
 @import "ansyn/less/common";
 
 div.container {
-	padding: 0 0 20px 0;
+	background-color: @menu-container-color;
+	margin-bottom: 13px;
+	padding: 13px;
 
 	&.Annotation {
 		button.down-arrow {
