--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filter-container/filter-container.component.less
@@ -8,7 +8,7 @@ div.container {
 		padding: 5px 0 10px 0;
 
 		span.title {
-			font-family: "Open Sans", sans-serif;
+			font-family: 'Lato', sans-serif;
 			font-style: normal;
 			font-weight: bold;
 			font-size: 14px;
@@ -22,7 +22,7 @@ div.container {
 		}
 
 		span.filtered {
-			font-family: "Open Sans", sans-serif;
+			font-family: 'Lato', sans-serif;
 			font-style: italic;
 			font-weight: normal;
 			font-size: 12px;
@@ -40,7 +40,7 @@ div.container {
 			border-left: 2px solid #FFFFFF;
 			float: right;
 			margin-right: 10px;
-			margin-top: 4px;
+			margin-top: 2px;
 			cursor: pointer;
 			outline: none;
 
@@ -51,9 +51,10 @@ div.container {
 
 		div.show-all {
 			float: right;
-			font-size: 12px;
+			font-size: 10px;
 			font-style: normal;
 			color: rgba(255, 255, 255, 0.75);
+			margin-top: 3px;
 			margin-right: 7px;
 			cursor: pointer;
 		}
