--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -39,7 +39,7 @@ div.container {
 		align-items: baseline;
 
 		span.title {
-			font-family: Open Sans;
+			font-family: 'Lato', sans-serif;
 			font-style: normal;
 			font-weight: bold;
 			font-size: 14px;
@@ -60,7 +60,7 @@ div.container {
 			border-left: 2px solid #FFFFFF;
 			float: right;
 			margin-right: 17px;
-			margin-top: 4px;
+			margin-top: 2px;
 			cursor: pointer;
 			outline: none;
 
@@ -85,9 +85,10 @@ div.container {
 		div.show-all {
 			display: none;
 			float: right;
-			font-size: 12px;
+			font-size: 10px;
 			font-style: normal;
 			color: rgba(255, 255, 255, 0.75);
+			margin-top: 3px;
 			margin-right: 7px;
 			cursor: pointer;
 		}
