--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -73,15 +73,13 @@ div.menu-wrapper {
 
 			span.badge {
 				position: absolute;
-				background: #D0021B;
+				background: #fb634e;
 				right: 17px;
-				top: 2px;
-				width: 16px;
-				height: 14px;
-				font-size: 11px;
+				top: 4px;
+				width: 18px;
+				height: 17px;
+				font-size: 12px;
 				border-radius: 50%;
-				border: 1px solid white;
-				padding-bottom: 2px;
 			}
 
 			img {
