--- a/src/app/app/login/login/login.component.less
+++ b/src/app/app/login/login/login.component.less
@@ -73,7 +73,7 @@
 				}
 
 				div.try-again {
-					font-family: 'Open Sans', sans-serif;
+					font-family: 'Lato', sans-serif;
 					visibility: hidden;
 					opacity: 0;
 					transition: 0.2s;
@@ -110,7 +110,7 @@
 					}
 					label {
 						position: relative;
-						font-family: 'Open Sans';
+						font-family: 'Lato', sans-serif;
 						user-select: none;
 						width: 143px;
 						cursor: pointer;
