--- a/src/app/@ansyn/ansyn/modules/core/forms/ansyn-checkbox/ansyn-checkbox.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/forms/ansyn-checkbox/ansyn-checkbox.component.less
@@ -23,8 +23,8 @@
 	input + label {
 		border: 1px solid #C9C9C9;
 		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0 -15px 10px -12px rgba(0, 0, 0, 0.05);
-		padding: 9px;
-		border-radius: 3px;
+		padding: 5px;
+		border-radius: 1px;
 		display: inline-block;
 		position: relative;
 	}
@@ -49,17 +49,17 @@
 
 		&:after {
 			content: '\2714';
-			font-size: 14px;
+			font-size: 8px;
 			position: absolute;
-			top: 0;
-			left: 3px;
+			top: -1px;
+			left: 2px;
 			color: @application-main-color;
 		}
 	}
 
 	div.ansyn-checkbox-text {
 		color: white;
-		margin-left: 5px;
+		margin-left: 8px;
 		overflow: hidden;
 
 		label {
