--- a/src/app/app/app.component.less
+++ b/src/app/app/app.component.less
@@ -3,7 +3,7 @@
 	height: 100vh;
 	display: block;
 	margin: 0;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 14px;
 	background: url(/assets/background.webp) no-repeat;
 	background-size: cover;
