inject overlay button

--- a/src/app/@ansyn/ansyn/modules/overlays/components/container/overlays-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/container/overlays-container.component.html
@@ -1,6 +1,6 @@
 <div class="overlays-container">
 
-	<ansyn-overlay-status></ansyn-overlay-status>
+	<ansyn-timeline-overlay-status></ansyn-timeline-overlay-status>
 
 	<ansyn-overlays-loader></ansyn-overlays-loader>
 
