--- a/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
@@ -2,7 +2,7 @@
 	 [style.visibility]="(isHidden$ | async) ? 'hidden' : 'visible'">
 	<ansyn-imagery-status *ngIf="showStatus"
 						  class="with-background"
-						  [mapState]="mapState"
+						  [mapId]="mapState.id"
 						  (onMove)="onMove.emit($event)"
 						  (toggleMapSynchronization)="toggleMapSynchronization()">
 	</ansyn-imagery-status>
@@ -22,7 +22,7 @@
 
 	<ng-container
 		*ngFor="let component of entryComponents.container"
-		[ansynEntryComponent]="{ component: component , mapState: mapState }">
+		[ansynEntryComponent]="{ component: component , mapId: mapState.id }">
 	</ng-container>
 
 </div>
