--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
@@ -1,6 +1,7 @@
 <ansyn-imagery-status
 	*ngIf="!hideOverlay && activeMap"
-	[mapState]="activeMap">
+	[mapState]="activeMap"
+>
 </ansyn-imagery-status>
 
 <div class="status-bar" [class.separated-state]="!hideOverlay">
