--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -329,7 +329,7 @@
 	   	}
     },
 	 "httpTimeout": "3000",
-	 "isFooterCollapsible": true
+	 "isFooterCollapsible": {{ getv "/ansyn/iscollapsible" "false" }}
   },
   "olConfig": {
   	 "needToUseLayerExtent": false,
@@ -356,7 +356,7 @@
     	"title": "Fork me on github",
 		"href": "{{ getv "/ansyn/menu/forkme/url" "https://github.com/ansyn/ansyn" }}"
     },
-    "isCollapsible": true
+    "isCollapsible": {{ getv "/ansyn/iscollapsible" "false" }}
   },
   "loginConfig": {
   	"baseUrl": "{{ getv "/ansyn/login/baseurl" "http://platform.ansyn.io:9001/api/v1/login" }}",
