minimize the timeline (#2271)
* Add component ansyn-footer to wrap timeline and status bar

* Initial code for the new vertical toggle button

* Now the button hides/shows the footer (but map becomes black)

* Now vertical un/collapse works, but without animations

* Re-adding animation to the footer collapse

* Unit tests

* Config: adding an environment variable option for the horizontal and vertical collapse buttons

* Text fix - Sandbox: add feature key for (overlays) reducer

--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -1,26 +1,19 @@
 <div class="app animations" [ngClass]="(isPinnedClass$ | async)">
 	<div class="menu">
-		<ansyn-menu [version]="version" [animatedElement]="animatedElement"></ansyn-menu>
+		<ansyn-menu [version]="version" [animatedElement]="animatedElementHorizontal"></ansyn-menu>
 	</div>
 
-	<div class="layer" #animatedElement>
-		<div class="maps-container">
+	<div class="layer" #animatedElementHorizontal>
+		<div class="maps-container" #animatedElementVertical>
 			<ansyn-imageries-manager></ansyn-imageries-manager>
 			<ansyn-context-menu *ngIf="renderContextMenu"></ansyn-context-menu>
 		</div>
 
-		<div class="status-timeline-container">
-			<div class="status">
-				<ansyn-status-bar
-					[selectedCaseName]="(selectedCaseName$ | async)"
-					[activeMap]="(activeMap$ | async)">
-				</ansyn-status-bar>
-			</div>
-
-			<div class="app-timeline-container">
-				<ansyn-overlays-container></ansyn-overlays-container>
-			</div>
-		</div>
+		<ansyn-footer
+			[selectedCaseName]="(selectedCaseName$ | async)"
+			[activeMap]="(activeMap$ | async)"
+			[animatedElement]="animatedElementVertical"
+		></ansyn-footer>
 	</div>
 </div>
 
