--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -87,20 +87,6 @@
 			overflow: hidden;
 			position: relative;
 
-			div.status-timeline-container {
-				position: relative;
-
-				.status {
-					position: relative;
-					height: 0;
-				}
-
-				.app-timeline-container {
-					height: @timeline-area-height;
-					background-color: white;
-				}
-			}
-
 			.maps-container {
 				position: relative;
 				flex: 1;
@@ -138,6 +124,24 @@
 				}
 			}
 
+			@keyframes collapsedVertical {
+				from {
+					transform: scale(1) translateY(-100px);
+				}
+				to {
+					transform: scale(1) translateY(0);
+				}
+			}
+
+			@keyframes unCollapsedVertical {
+				from {
+					transform: scale(1.2) translateY(100px);
+				}
+				to {
+					transform: scale(1) translateY(0);
+				}
+			}
+
 			div.menu {
 				animation: menu-init @animation-duration;
 				transform: transitionX(0);
@@ -161,7 +165,7 @@
 				animation-fill-mode: forwards;
 			}
 
-			div.layer div.status-timeline-container {
+			div.layer ansyn-footer {
 				animation: timeline-init @animation-duration;
 			}
 		}
