Overlay out from map facade (#2276)
* add status to map facade entryComponent

* inject overlay button

* resolve comment

* add pipe to for showFirst buttons

* ngIf instead pipe

* fix lib build

* fix qoutes

* fix test

--- a/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.html
@@ -2,7 +2,7 @@
 	 [style.visibility]="(isHidden$ | async) ? 'hidden' : 'visible'">
 	<ansyn-imagery-status *ngIf="showStatus"
 						  class="with-background"
-						  [mapState]="mapState"
+						  [mapId]="mapState.id"
 						  (onMove)="onMove.emit($event)"
 						  (toggleMapSynchronization)="toggleMapSynchronization()">
 	</ansyn-imagery-status>
@@ -21,8 +21,8 @@
 						  [mapId]="mapState.id"></ansyn-map-search-box>
 
 	<ng-container
-		*ngFor="let component of entryComponents"
-		[ansynEntryComponent]="{ component: component , mapState: mapState }">
+		*ngFor="let component of entryComponents.container"
+		[ansynEntryComponent]="{ component: component , mapId: mapState.id }">
 	</ng-container>
 
 </div>
