working dimentions button

--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -24,6 +24,11 @@
 			/deep/ ansyn-imagery-rotation, /deep/ ansyn-map-search-box {
 				top: 50px;
 			}
+
+			// todo: map facade should not know this element
+			/deep/ ansyn-imagery-dimension-mode {
+				top: 150px;
+			}
 		}
 
 		div.active-border {
