--- a/src/app/@ansyn/ansyn/assets/styles/styles.css
+++ b/src/app/@ansyn/ansyn/assets/styles/styles.css
@@ -234,11 +234,12 @@ input[type=number]::-webkit-outer-spin-button {
 
 @font-face {
 	font-family: 'AnSyn';
-	src: url('/assets/fonts/AnSyn/AnSyn.eot?mxpept&v=1');
-	src: url('/assets/fonts/AnSyn/AnSyn.eot?mxpept&v=1#iefix') format('embedded-opentype'),
-	url('/assets/fonts/AnSyn/AnSyn.ttf?mxpept&v=1') format('truetype'),
-	url('/assets/fonts/AnSyn/AnSyn.woff?mxpept&v=1') format('woff'),
-	url('/assets/fonts/AnSyn/AnSyn.svg?mxpept&v=1#AnSyn') format('svg');
+	src: url('/assets/fonts/AnSyn/AnSyn.eot?38626511');
+  src: url('/assets/fonts/AnSyn/AnSyn.eot?38626511#iefix') format('embedded-opentype'),
+       url('/assets/fonts/AnSyn/AnSyn.woff2?38626511') format('woff2'),
+       url('/assets/fonts/AnSyn/AnSyn.woff?38626511') format('woff'),
+       url('/assets/fonts/AnSyn/AnSyn.ttf?38626511') format('truetype'),
+       url('/assets/fonts/AnSyn/AnSyn.svg?38626511#AnSyn') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
