--- a/src/app/@ansyn/map-facade/components/welcome-notification/welcome-notification.component.less
+++ b/src/app/@ansyn/map-facade/components/welcome-notification/welcome-notification.component.less
@@ -32,8 +32,8 @@
 		header {
 			margin-bottom: 1rem;
 		}
-		span.icon-map-Point {
-			color: #30A2C6;
+		span.icon-map-pin-point {
+			color: #0091ff;
 		}
 	}
 }
