overlay source type 2 @ansyn/ansyn

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -136,15 +136,7 @@
     "schema": "layers"
   },
   "overlaysConfig": {
-    "limit": 249
-  },
-  "mapFacadeConfig": {
-  	"welcomeNotification": {
-		"headerText": "Welcome to AnSyn!",
-		"mainText": "To get overlays anywhere in the world, just right click on the wanted area and click the central button"
-  	},
-    "overlayCoverage": 0.1,
-    "displayDebounceTime": 400,
+    "limit": 249,
     "sourceTypeNotices": {
 		"PLANET": {
 			"Default": "Open California Satellite Imagery © 2016 Planet Labs Inc. licensed under CC BY-SA 4.0.",
@@ -154,7 +146,15 @@
 		"OPEN_AERIAL": {
 			"Default": "© Copyright 2010, OpenAerialMap contributors"
 		}
-	},
+	}
+  },
+  "mapFacadeConfig": {
+  	"welcomeNotification": {
+		"headerText": "Welcome to AnSyn!",
+		"mainText": "To get overlays anywhere in the world, just right click on the wanted area and click the central button"
+  	},
+    "overlayCoverage": 0.1,
+    "displayDebounceTime": 400,
     "sensorTypeShortcuts": {
       "Panchromatic": "P",
       "8-band (Coastal, Blue, Green, Yellow, Red, Red-edge, NIR1, NIR2) Multispectral": "8B",
